# ICode-Luna

./: DEPLOYMENT_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  package-lock.json
backend/: .gitignore  Dockerfile  check_unparsed_subjects.py  clear_and_reprocess.py  debug_email.py  docker-compose.yml  fix_index_and_reprocess.py  inspect_unparsed.py  process_all_emails.py  pyproject.toml  reprocess_fixed.py  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: analytics.py  auth.py  registrations.py  webhook.py
backend/app/db/: __init__.py  mongodb.py
backend/app/models/: __init__.py  registration.py
backend/app/services/: email_parser.py  gmail_service.py  pubsub_handler.py
backend/app/utils/: auth.py  clerk_auth.py  logger.py  parser_patterns.py
backend/scripts/: convert_credentials_to_base64.py  test_all.py  test_gmail_credentials.py  test_oauth_credentials.py  test_pubsub_webhook.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel-deployment.md  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/dashboard/: DailyCapacityView.tsx  DashboardLayout.tsx  EnrollmentCalendar.tsx  EnrollmentDetailModal.tsx  KPICard.tsx  RegistrationTable.tsx  RevenueChart.tsx  SearchFilters.tsx
frontend/src/hooks/: useAnalytics.ts  useRegistrations.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  ForgotPassword.tsx  Login.tsx  SignUp.tsx
(+8 files in other folders)
